--- a/pom.xml
+++ b/pom.xml
@@ -679,7 +679,7 @@
                         <exclude>${integrationTests}</exclude>
                         <exclude>${systemTests}</exclude>
                     </excludes>
-                    <argLine> -Xms512m -Xmx4096m </argLine>
+                    <argLine> -Xms512m -Xmx4096m -Djava.awt.headless=true</argLine>
                 </configuration>
             </plugin>
             <!-- pluging to run tests after 'package' phase in 'integration-test' -->
@@ -693,6 +693,7 @@
                         <include>${integrationTests}</include>
                         <include>${systemTests}</include>
                     </includes -->
+                    <argLine>-Djava.awt.headless=true</argLine>
                 </configuration>
                 <executions>
                     <execution>
